Fix misaligned gradient container

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -60,6 +60,7 @@ section.hero {
 .hero__gradient-container {
   display: flex;
   align-items: center;
+  height: 100%;
   width: 100%;
   background: linear-gradient(
     to right,
